# ddd-app-prototype

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
deploy/: Dockerfile  compose-testing.yml  compose.yml
src/: alembic.ini  entrypoint-app.sh  entrypoint-testing.sh
src/app/: main.py
src/app/core/: __init__.py  dependencies.py  exceptions.py  mapper_protocol.py  session.py  settings.py  type_aliases.py
src/app/core/domain/: __init__.py  entity_base.py  permission_discovery.py  value_object_base.py  value_objects.py
src/app/core/infra/: __init__.py  base_model.py  mixins.py  pagination.py  quary_params.py  repository_base.py
src/app/core/startup/: __init__.py  create_app.py  exception_handlers.py  init_database.py  lifespan.py
src/app/core/utils/: datetime_utils.py  modules.py
src/app/identity/: __init__.py  exceptions.py
src/app/identity/api/: auth_schemas.py  dependencies.py  permission_dependencies.py  query_params.py
src/app/identity/api/v1/: __init__.py  auth_router.py  group_router.py  permission_router.py  user_router.py
src/app/identity/application/: __init__.py  security.py
src/app/identity/application/dto/: __init__.py  group_dto.py  permission_dto.py  user_dto.py
src/app/identity/application/mappers/: __init__.py  group_mapper.py  permission_mapper.py  user_mapper.py
src/app/identity/application/services/: __init__.py
src/app/identity/domain/: __init__.py  exceptions.py  permissions.py  value_objects.py
src/app/identity/domain/entities/: __init__.py  group.py  permission.py  user.py
src/app/identity/domain/interfaces/: __init__.py  group_command_repository_protocol.py  group_query_repository_protocol.py  password_hasher_protocol.py  permission_repository_protocol.py  user_command_repository_protocol.py  user_query_repository_protocol.py
src/app/identity/dto/: user_dto.py
src/app/identity/infra/: __init__.py  dependencies.py  init_db.py
src/app/identity/infra/models/: __init__.py  group_model.py  group_permission_model.py  permission_model.py  user_group_model.py  user_model.py
src/app/identity/infra/repositories/: __init__.py  group_command_repository.py  group_query_repository.py  permission_command_repository.py  (+3 more)
src/app/identity/mappers/: user_mapper.py
src/migrations/: env.py
src/migrations/versions/: 2026-03-05_1329-8e511f7165cb_add_users.py  2026-03-17_0039-b3adeb11da96_add_groups_and_perms.py
src/tests/: __init__.py  conftest.py  test_admin.py  test_admin_user.py  test_auth.py  test_groups.py  test_health.py  test_permissions.py  test_users.py
src/tests/fixtures/: __init__.py  app.py  groups.py  settings.py  users.py
(+8 files in other folders)
